--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,11 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <!-- 
+      Fonts & fontawesome
+     -->
     <link rel="stylesheet" href="https://use.typekit.net/rzx4itu.css">
+    <script src="https://kit.fontawesome.com/1110da89b8.js" crossorigin="anonymous"></script>
 
 
     <!--
