--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
     <link rel="stylesheet" href="https://use.typekit.net/rzx4itu.css">
     <script src="https://kit.fontawesome.com/1110da89b8.js" crossorigin="anonymous"></script>
 
+    <!-- 
+      Carousel uses jquery
+     -->
+     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> 
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
