updated google analytics 4

--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,16 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- 
+    <!--
       Fonts & fontawesome
      -->
     <link rel="stylesheet" href="https://use.typekit.net/rzx4itu.css">
     <script src="https://kit.fontawesome.com/1110da89b8.js" crossorigin="anonymous"></script>
 
-    <!-- 
+    <!--
       Carousel uses jquery
      -->
-     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> 
+     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -35,15 +35,15 @@
     <title>Oficina Educación Online</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4DRTTQ30WF"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2M4FKSDEH6"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
 
-      gtag('config', 'G-4DRTTQ30WF');
+      gtag('config', 'G-2M4FKSDEH6');
     </script>
-    
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
